<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="#F9F9F9"
    android:id="@+id/terms_and_condition_container"
    tools:context=".ui.profile.settings.fragments.TermsAndConditionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/otp_arr_back"
                android:id="@+id/back"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_margin="20dp"
                android:text="Terms and Condition"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Last updated (Febuary 29, 2025)"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="1. Introduction"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome to Jinja-Hub, the mobile app designed to enhance your experience with Multistream’s products and services. Please note that Jinja-Hub is an independent platform and is not directly affiliated with Multistream TM Ltd. By accessing or using our app, you agree to be bound by these Terms and Conditions."
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="2. Acceptance of Terms"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="By using the Jinja-Hub app, you confirm that you have read, understood, and agree to these Terms and Conditions. If you do not agree with any part of these terms, please do not use our services."
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="3. Eligibility"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You must be at least 18 years old or the legal age in your jurisdiction to enter into these Terms. By using Jinja-Hub, you represent that you meet these eligibility requirements."
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="4. Description of Services"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="5. User Responsibilities"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition_2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="6. Intellectual Property"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition_3"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="7. Disclaimers"
                android:textColor="@color/black"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition_4"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="8. Modifications and Termination"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition_5"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="9. Governing Law"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_condition_6"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="10. Contact Information"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="130dp"
                android:text="@string/terms_and_condition_7"
                />

        </LinearLayout>
    </ScrollView>


</FrameLayout>