<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/my_container"
    tools:context=".ui.services.ServicesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/linear"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="Services"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/search_dark" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear"
            android:layout_marginTop="20dp"
            android:background="@drawable/services_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/category_title"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="Category" />

            <!-- Horizontal RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_title"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="15dp"
                android:orientation="horizontal" />

            <!-- Vertical RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/category_recycler"
                android:layout_marginTop="16dp" />

            <!-- Empty State -->
            <LinearLayout
                android:id="@+id/empty_state_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_below="@+id/category_recycler"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/empty_professional_state"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/empty_state_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_state_message"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <Button
                    android:id="@+id/retry_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:text="@string/retry_button_text" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
